# probs_with_probs

./: README.md  pixi.toml  pyproject.toml
probs_with_probs/: __init__.py  data.py  openai.py  paths.py  utils.py
scripts/: plot_ROC.py  test.py
