[project]
name = "probs_with_probs"
version = "0.0.1"
authors = [
  { name="Katherine Rosenfeld"}
]
description = "TBD"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"